WIP
-----------------------------
* Vehicle Brand Editor
  - Now allows multi-selection for deleting vehicle brand entries.
  - Fixed an issue where some vehicle info is missing while importing from LMU Rest API.
    Make sure to import again to update all vehicle brand info from LMU.

* Tyre wear Widget
  - Now uses laptime pace for calculating "tyre lifespan in minutes".

2.17.4 (2024-08-30)
-----------------------------
* General
  - Fixed state check error while restarting API in rare case.
  - Add clickable API button on main window status bar
    that opens "Shared Memory API" config dialog for easy access.

* Fuel calculator
  - Fixed an error when calculating with Gallon unit.

* Relative finish order Widget
  - Add "show_extra_refilling" option, which shows readings of extra refilling row
    below "local player's refilling" row. Each extra refilling value equals "extra laps
    of consumption" plus "local player's refilling" value of same column.
    Those values save the trouble from manual calculation in case there will be extra laps.
    The first column of extra refilling row shows number of extra laps depends on
    "number of extra laps" setting, such as "EX+1" for 1 extra lap, or "EX+3" for 3 extra laps.
  - Add "number_of_extra_laps" option, which sets number of extra laps for extra refilling calculation.
    Default is "1" extra lap.
  - Updated usage and examples for Relative finish order Widget in User Guide.

2.17.3 (2024-08-19)
-----------------------------
* General
  - Fixed a bug (introduced in v2.17.0) in API connector that would cause TinyPedal to stop work
    when user selected "LMU API" in Shared Memory API config dialog.
    Note, LMU API option is currently only a placeholder which uses the same underlying
    RF2 API and "rF2 Shared Memory Plugin" and works exactly same as RF2.
    Updated "User Guide" info regarding API selector.
  - Optimized overlay state check to avoid unnecessary function calls.

* Command line arguments